# nonebot-plugin-userinfo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codecov.yml  update_poetry_lock.yml
nonebot_plugin_userinfo/: __init__.py  getter.py  image_source.py  user_info.py  utils.py
nonebot_plugin_userinfo/adapters/: __init__.py  console.py  discord.py  dodo.py  feishu.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  qqguild.py  red.py  satori.py  telegram.py  villa.py
tests/: conftest.py  test_console.py  test_discord.py  test_dodo.py  test_feishu.py  test_kaiheila.py  test_onebot_v11.py  test_onebot_v12.py  test_qq.py  test_qqguild.py  test_red.py  test_satori.py  test_telegram.py  test_user_info.py  test_villa.py  utils.py
tests/plugins/: echo.py
