[tool.poetry]
name = "nonebot_plugin_userinfo"
version = "0.2.4"
description = "Nonebot2 用户信息获取插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-userinfo"
repository = "https://github.com/noneplugin/nonebot-plugin-userinfo"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
httpx = ">=0.20.0,<1.0.0"
cachetools = "^5.0.0"
emoji = "^2.0.0"
strenum = "^0.4.8"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
nonebug = "^0.3.0"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.4.0"
nonebot-adapter-console = "^0.5.0"
nonebot-adapter-kaiheila = "^0.3.1"
nonebot-adapter-telegram = "^0.1.0b17"
nonebot-adapter-feishu = "^2.4.0"
nonebot-adapter-red = "^0.9.0"
nonebot-adapter-discord = "^0.1.7"
nonebot-adapter-dodo = "^0.2.0"
nonebot-adapter-satori = "^0.11.2"
nonebot-adapter-qq = "^1.4.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.nonebot]
plugins = ["nonebot_plugin_userinfo"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
  "except ActionFailed as e:",
  "except KeyError:",
  "pass",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
