[tool.poetry]
name = "nonebot_plugin_userinfo"
version = "0.2.6"
description = "Nonebot2 用户信息获取插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-userinfo"
repository = "https://github.com/noneplugin/nonebot-plugin-userinfo"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.0"
httpx = ">=0.20.0,<1.0.0"
cachetools = "^5.0.0"
emoji = "^2.0.0"
strenum = "^0.4.15"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.0"
nonebug = "^0.3.0"
nonebot2 = { version = "^2.3.0", extras = ["fastapi"] }

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.4.4"
nonebot-adapter-console = "^0.6.0"
nonebot-adapter-kaiheila = "^0.3.4"
nonebot-adapter-telegram = "^0.1.0b17"
nonebot-adapter-feishu = "^2.6.2"
nonebot-adapter-red = "^0.9.0"
nonebot-adapter-discord = "^0.1.8"
nonebot-adapter-dodo = "^0.2.1"
nonebot-adapter-satori = "^0.12.3"
nonebot-adapter-qq = "^1.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.nonebot]
plugins = ["nonebot_plugin_userinfo"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
  "except ActionFailed as e:",
  "except KeyError:",
  "pass",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
